@startuml

title __DRUGFACTORY's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.drugFactory {
      class ChemicalDrugFactory {
          + createDrug()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.drugFactory {
      interface DrugFactory {
          {abstract} + createDrug()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.drugFactory {
      class NaturalDrugFactory {
          + createDrug()
      }
    }
  }
  

  ChemicalDrugFactory -up-|> DrugFactory
  NaturalDrugFactory -up-|> DrugFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
